# maester

./: README.md  pyproject.toml
maester/: .env.example  maester.py  main.py  pms_only_plz.txt
maester.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_maester.py
